--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,3 +10,9 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
+Imports: crayon, emo
+Remotes: hadley/emo
+Suggests: testthat,
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
